# chronos

./: README.md  post_install  pyproject.toml
chronos/: __init__.py  app.py  modbus_client.py  root_logger.py
chronos/lib/: __init__.py  config.py  config_parser.py  db.py  modbus_client.py  root_logger.py  socketio_client.py
chronos/utils/: chronos_hardware_debug.py
chronos/utils/relayHelpers/: relayread.py  relaywrite.py
dashboard/: db.py  db_queries.py
data_files/: chronos_config.json
scripts/: chronosd.py
